feat: add login user and user company
