# docs/swagger/swagger.yaml
@@ -2,7 +2,7 @@ basePath: /
 definitions:
   dtos.CategoryResponseDto:
     properties:
-      descripcion:
+      description:
         type: string
       id:
         type: string
@@ -11,9 +11,9 @@ definitions:
     type: object
   dtos.CityResponseDto:
     properties:
-      cityName:
+      city_name:
         type: string
-      departmentID:
+      department_id:
         type: integer
       id:
         type: integer
@@ -25,13 +25,19 @@ definitions:
       id:
         type: string
     type: object
+  dtos.DepartmentRequestDto:
+    properties:
+      department_id:
+        description: Cambia "json" por "form"
+        type: integer
+      department_name:
+        type: string
+    type: object
   dtos.LoginDto:
     properties:
       email:
         type: string
       password:
-        type: string
-      token:
         type: string
     required:
     - email
@@ -39,27 +45,27 @@ definitions:
     type: object
   dtos.ProductResponseDto:
     properties:
-      categoryID:
+      category_id:
         type: string
-      companyID:
+      company_id:
         type: string
-      discountID:
+      discount_id:
         type: string
       id:
         type: string
-      longDescription:
+      long_description:
         type: string
       name:
         type: string
       price:
         type: number
-      shortDescription:
+      short_description:
         type: string
       stock:
         type: integer
-      subCategoryID:
+      sub_category_id:
         type: string
-      tagID:
+      tag_id:
         type: string
     type: object
   dtos.RegisterCompanyRequestDto:
@@ -99,6 +105,19 @@ definitions:
     - name
     - password
     type: object
+  dtos.RegisterCompanyResponseDto:
+    properties:
+      company_id:
+        type: string
+      company_name:
+        type: string
+      email:
+        type: string
+      name:
+        type: string
+      user_id:
+        type: string
+    type: object
   dtos.RegisterRequestDto:
     properties:
       address:
@@ -127,7 +146,7 @@ definitions:
         type: string
       id:
         type: string
-      lastName:
+      last_name:
         type: string
       name:
         type: string
@@ -321,7 +340,7 @@ paths:
             - $ref: '#/definitions/models.AppResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/dtos.CompanyResponseDto'
+                  $ref: '#/definitions/dtos.RegisterCompanyResponseDto'
               type: object
         "400":
           description: Bad Request
@@ -342,6 +361,54 @@ paths:
       summary: Registra una nueva empresa
       tags:
       - Empresas
+  /api/v1/departments:
+    get:
+      consumes:
+      - application/json
+      description: Retorna un listado de las ciudades filtradas por departamento o
+        nombre de ciudad.
+      parameters:
+      - description: ID del departamento (opcional)
+        in: query
+        name: department_id
+        type: integer
+      - description: Nombre de la ciudad (opcional)
+        in: query
+        name: department_name
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.AppResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/dtos.DepartmentRequestDto'
+                  type: array
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.AppResponse'
+            - properties:
+                data: {}
+              type: object
+        "409":
+          description: Conflict
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.AppResponse'
+            - properties:
+                data: {}
+              type: object
+      summary: Obtener todos los departamentos de la aplicación
+      tags:
+      - Departments
   /api/v1/login:
     post:
       consumes:
