# internal/controllers/department.controller.go
@@ -17,7 +17,18 @@ func NewDepartmentController(service *services.DepartmentService) *DepartmentCon
 	return &DepartmentController{service: service}
 }
 
-
+// FindCitiesByFilters Obtener todas las ciudades de la aplicación
+// @Summary Obtener todos los departamentos de la aplicación
+// @Description Retorna un listado de las ciudades filtradas por departamento o nombre de ciudad.
+// @Tags Departments
+// @Accept json
+// @Produce json
+// @Param department_id query int false "ID del departamento (opcional)"
+// @Param department_name query string false "Nombre de la ciudad (opcional)"
+// @Success 200 {object} models.AppResponse{data=[]dtos.DepartmentRequestDto}
+// @Failure 400 {object} models.AppResponse{data=interface{}}
+// @Failure 409 {object} models.AppResponse{data=interface{}}
+// @Router /api/v1/departments [get]
 func (ct DepartmentController) FindAllDepartmentsByFilters(c *gin.Context) {
 
 	var dto dtos.DepartmentRequestDto
